// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip with isPointerDevice being true renders closed by default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      data-testid="tooltip-trigger"
    >
      Trigger
    </div>
  </div>
</div>
`;

exports[`Tooltip with isPointerDevice being true renders with portals disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-describedby="tooltip-id"
      class=""
      data-testid="tooltip-trigger"
    >
      Trigger
    </div>
    <div
      class="MuiTooltip-popper MuiTooltip-popperArrow"
      id="tooltip-id"
      role="tooltip"
      style="position: absolute;"
      x-placement="top"
    >
      <div
        class="MuiTooltip-tooltip PicassoTooltip-tooltip PicassoTooltip-light MuiTooltip-tooltipPlacementTop MuiTooltip-tooltipArrow"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-inherit MuiTypography-body1"
        >
          <div
            data-testid="tooltip-content"
          >
            Content
          </div>
        </div>
        <span
          class="MuiTooltip-arrow PicassoTooltip-arrow"
        />
      </div>
    </div>
  </div>
</div>
`;
